syntax = "proto3";

package todo;
option go_package = "./;proto";

// Interface
service TodoService {
    rpc CreateTodo(CreateTodoRequest) returns (CreateTodoResponse) {};
    rpc GetTodos(GetTodosRequest) returns (GetTodosResponse) {};
}

// CreateTodo
message CreateTodoRequest {
    string title = 1;
    string description = 2;
}

message CreateTodoResponse {
    string id = 1;
}

// GetTodo
message GetTodosRequest {}

message Todo {
    string id = 1;
    string title = 2;
    string description = 3;
}

message GetTodosResponse {
    repeated Todo todos = 1;
}

